Fix text alignment in PWYW link on small widths

--- a/components/Sketchplanation.module.css
+++ b/components/Sketchplanation.module.css
@@ -101,7 +101,7 @@
 }
 
 .pwyw-button {
-  @apply mt-6 flex items-center;
+  @apply mt-6 flex items-center text-left;
   color: var(--color-subduedText);
 }
 
